2008-02-08  Dalibor Topic  <robilad@kaffe.org>

	* m4/acinclude.m4 (CLASSPATH_CHECK_JAVAH) [USER_JAVAH]: Check for gjavah-4.2
	and gjavah-4.1.

2008-02-08  Dalibor Topic  <robilad@kaffe.org>

	* vm/reference/java/lang/VMDouble.java (doubleToLongBits): Removed unused method.

	* native/jni/java-lang/java_lang_VMDouble.c (Java_java_lang_VMDouble_doubleToLongBits): 
	Removed unused function.

	* include/java_lang_VMDouble.h: Regenerated.
	
	* doc/cp-vmintegration.texinfo (java.lang.VMDouble): Removed
	unused method doubleToLongBits.

2008-02-08  Dalibor Topic  <robilad@kaffe.org>

	* java/lang/Double.java (doubleToLongBits): Simplified.

2008-02-07  Ian Rogers  <ian.rogers@manchester.ac.uk>

	* java/lang/String.java
	(replace): Only copy "live" portion of String. Use array copies in preference
        to clone.
	(toLowerCaseTurkish): likewise
        (toLowerCase): likewise
	(toUpperCaseTurkish): likewise
	(toUpperCase): likewise
	(toCharArray): Use array copies in preference to clone.

2008-02-05  Ian Rogers  <ian.rogers@manchester.ac.uk>

	* gnu/java/lang/reflect/TypeSignature.java
	* java/io/BufferedReader.java
	* java/io/DataInputStream.java
	* java/lang/StackTraceElement.java
	* java/lang/Throwable.java
	* java/lang/reflect/Proxy.java
	* java/net/URI.java
	* java/net/URLClassLoader.java
	* java/net/URLEncoder.java
	* java/text/SimpleDateFormat.java
	* java/util/AbstractMap.java
	* java/util/Calendar.java
	* java/util/Date.java
	* java/util/Hashtable.java
	Use StringBuilder in preference to StringBuffer
	* java/util/Calendar.java
	* java/util/Hashtable.java
	Make private fields that can be final, final
	* java/net/URI.java
	Avoid creating Integer objects for the sake of comparison
	* java/lang/reflect/Proxy.java
	* java/text/SimpleDateFormat.java
	Swap use of "new Character/Integer" to use of valueOf methods

2008-01-29  Ito Kazumitsu  <kaz@maczuka.gcd.org>

	Fixes bug #22941
	* java/io/DataInputStream.java(readUTFLong): New method.
	(readUTF): New private method.